Fixed some more problems on small width

--- a/media.css
+++ b/media.css
@@ -26,10 +26,36 @@
     .text-wrapper h3, .text-wrapper p{
         text-align: center;
     }
+    .m_text-wrapper{
+        margin:auto;
+        width:85%
+    }
+    .m_text-wrapper span{
+        font-size: 3rem;
+        margin-right:0.5rem;
+    }
 }
 @media(max-width:452px){
     .trainer img{
         width:300px;
         height: 300px;
+    }
+    .membership a{
+        font-size: 0.75rem;
+        padding:0.5rem 1.25rem;
+    }
+}
+@media(max-width:380px){
+    .trainers h2,.membership h2{
+        font-size: 2rem;
+    }
+    .desktop-nav .logo{
+        margin-left: 20px;
+    }
+}
+@media(max-width:320px){
+    .trainer img{
+        width: 200px;
+        height: 200px;
     }
 }
