--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@
 html {
 	--color-1: rgb(255, 255, 255);
 	--color-2: rgb(0, 0, 0);
-	--color-3:rgb(120,120,120);
-	--color-4:rgb(200,200,200);
+	--color-3: rgb(120, 120, 120);
+	--color-4: rgb(200, 200, 200);
 }
 header {
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	background-image: url('img/athlete-bike-black-and-white-cycle-260409.jpg');
+	background-image: url("img/athlete-bike-black-and-white-cycle-260409.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	display: flex;
@@ -107,6 +107,7 @@ ul a:hover,
 .burger-btn span {
 	display: block;
 	background-color: #fff;
+	box-shadow: 0 5px 0px black;
 	width: 100%;
 	height: 3px;
 }
@@ -115,104 +116,102 @@ ul a:hover,
 }
 
 /* S E C T I O N   T R A I N E R S */
-.trainers{
-	padding-bottom:5rem
+.trainers {
+	padding-bottom: 5rem;
 }
-.trainers .container{
+.trainers .container {
 	background-color: var(--color-1);
-	margin-top:60px;
-	display:flex;
+	margin-top: 60px;
+	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	
 }
-h2{
+h2 {
 	text-align: center;
 	font-size: var(--color-2);
-	font-family: 'roboto',sans-serif;
+	font-family: "roboto", sans-serif;
 	text-transform: uppercase;
 	font-size: 3rem;
-	margin:60px auto 0;
+	margin: 60px auto 0;
 }
-.trainer{
+.trainer {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-	margin-bottom:2rem;
+	margin-bottom: 2rem;
 }
-.trainer h3{
+.trainer h3 {
 	text-transform: uppercase;
 	font-size: 1.5rem;
-	font-family: 'roboto',sans-serif;
+	font-family: "roboto", sans-serif;
 	text-align: left;
-	margin-top:1rem;
+	margin-top: 1rem;
 }
-.trainer p{
-	font-family: 'open-sans',sans-serif;
-	margin:1.5rem 0;
-	color:var(--color-3);
+.trainer p {
+	font-family: "open-sans", sans-serif;
+	margin: 1.5rem 0;
+	color: var(--color-3);
 }
-.trainer a{
-	color:var(--color-1);
-	padding:0.5rem 1.5rem;
+.trainer a {
+	color: var(--color-1);
+	padding: 0.5rem 1.5rem;
 	background-color: var(--color-2);
 	text-decoration: none;
-	font-family: 'roboto',sans-serif;
-
+	font-family: "roboto", sans-serif;
 }
-.trainers img{
-	width:400px;
+.trainers img {
+	width: 400px;
 	height: 400px;
 	object-fit: cover;
-	object-position:center;
+	object-position: center;
 }
 
-.trainer .img{
-	margin:0 auto;
+.trainer .img {
+	margin: 0 auto;
 }
-.text-wrapper{
-	width:500px;
+.text-wrapper {
+	width: 500px;
 	text-align: center;
 	padding: 0 50px;
 }
 
-.membership{
-	background-image: url('img/image_boxer.jpg');
+.membership {
+	background-image: url("img/image_boxer.jpg");
 	background-size: cover;
 	color: var(--color-1);
 }
-.membership .container{
-	max-width:1200px;
-	margin:0 auto;
+.membership .container {
+	max-width: 1200px;
+	margin: 0 auto;
 }
-.membership h2{
-	padding:3rem 3rem;
+.membership h2 {
+	padding: 3rem 3rem;
 	text-align: left;
 }
-.membership p{
-	font-family: 'open-sans',sans-serif;	
+.membership p {
+	font-family: "open-sans", sans-serif;
 	letter-spacing: 1px;
 	font-size: 1rem;
-	line-height: 1.6;	
+	line-height: 1.6;
 }
-.m_text-wrapper{
-	display:flex;
-	width:60%;
+.m_text-wrapper {
+	display: flex;
+	width: 60%;
 	margin: 2rem 0 1rem 6rem;
 }
-.m_text-wrapper span{
+.m_text-wrapper span {
 	font-size: 4rem;
-	margin-right:2.5rem;
+	margin-right: 2.5rem;
 }
-.membership a{
-	display:inline-block;
-	padding:0.75rem 1.75rem;
+.membership a {
+	display: inline-block;
+	padding: 0.75rem 1.75rem;
 	margin: 2rem 0 3rem 3rem;
 	text-transform: uppercase;
 	text-decoration: none;
 	font-size: 1rem;
-	font-family: 'roboto',sans-serif;
-	color:var(--color-2);
+	font-family: "roboto", sans-serif;
+	color: var(--color-2);
 	background-color: var(--color-1);
 }
